# SpinoCore-Game-Engine

./: CMakeLists.txt
cmake/: ConfigSync.cmake  EnsureDirectory.cmake  SetupWorkspace.cmake  SyncDirectory.cmake
include/SpinoCore/: Engine.h
include/SpinoCore/Config/: ConfigEntry.h  EngineConfig.h
include/SpinoCore/Logs/: EngineLogger.h
include/SpinoCore/Utils/: DeepPimpl.h
src/: Engine.cpp
src/Config/: ConfigHelper.cpp  ConfigHelper.h  Constants.h  EngineConfig.cpp
src/FileSystem/: FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  PathResolver.cpp  PathResolver.h
src/FileSystem/Core/: PathResolver.cpp  PathResolver.h  VirtualFileSystem.cpp  VirtualFileSystem.h
src/FileSystem/IO/: FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h
src/FileSystem/Mount/: FolderMount.cpp  FolderMount.h  MountPoint.h
src/Logs/: EngineLogger.cpp
src/Utils/: JSONUtils.cpp  JSONUtils.h
tests/: CMakeLists.txt
tests/Config/: EngineConfigTest.cpp
tests/FileSystem/: FileReaderTest.cpp  FileWriterTest.cpp
tests/FileSystem/Core/: PathResolverTest.cpp  VirtualFileSystemTest.cpp
tests/FileSystem/IO/: FileReaderTest.cpp  FileWriterTest.cpp
tests/FileSystem/Mount/: FolderMountTest.cpp
tests/Utils/: JSONUtilsTest.cpp
